	  because the library will call it automatically.  These
	  interfaces now also return a reference to the outgoing buffer
	  which includes the assembled packet, which the application can 
	  use to encrypt the packet.

	  Affected files are lib/silccore/silcpacket.[ch],
	  lib/silcclient/client.c, client_channel.c client_prvmsg.c,
	  silcd/packet_send.c, server_backup.c and packet_receive.c.

Mon Mar 18 21:00:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added macro SILC_PACKET_DATALEN which can be used during
	  packet assembling to check whether the data to be added to	
	  the packet will fit to SILC_PACKET_MAX_LEN.  If not the data
	  len is truncated until it fits it.

	  Added checks for maximum length of channel message payload and
	  private message payload also.

	  Added checks for maximum packet length in server and in
	  client library.

	  Affected files are lib/silccore/silcpacket.h, silcd/packet_send.c,
	  lib/silcclient/client.c, lib/silccore/silcchannel.c and
	  lib/silccore/silcprivate.c, lib/silcclient/client_channel.c and
	  lib/silcclient/client_prvmsg.c.

Mon Mar 18 14:54:42 CET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_server_packet_queue_purge call to the
	  silc_server_disconnect_remote to assure that all data in the
	  queue before disconnecting is sent to the network.  Affected
	  file silcd/server.c.

Sun Mar 17 19:26:16 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added the deleting of server's own ID cache entry to the
	  silc_server_free function.  Free also everything else that
	  has been allocated in silc_server_init.  The affected file 
	  is silcd/server.c.

Sun Mar 17 15:44:56 EET 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added functions silc_parse_version_string, silc_version_to_num,
	  and silc_ske_parse_version to parse SILC protocol style version
	  strings.  Affected files lib/silcutil/silcutil.[ch] and
	  lib/silcske/silcske.[ch].
