@@ -15,6 +15,11 @@ Tue Mar 19 16:32:43 CET 2002  Pekka Riikonen <priikone@silcnet.org>
 	  lib/silcclient/client.c, client_channel.c client_prvmsg.c,
 	  silcd/packet_send.c, server_backup.c and packet_receive.c.
 
+	* Fixed a packet sending bug on very high load, where outgoing
+	  packet queue wasn't handled correctly and packets got corrupted.
+	  Affected files are lib/silcutil/*/silc*sockconn.c,
+	  lib/silcclient/client.c and silcd/server.c.
+
 Mon Mar 18 21:00:41 EET 2002  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added macro SILC_PACKET_DATALEN which can be used during
